# kratos

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.es.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  package.json
.github/: FUNDING.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  manual-release-bump.yml  release-candidate.yml  release-drafter.yml  release-published-follow-up.yml  release.yml
crates/kratos-cli/: Cargo.toml
crates/kratos-cli/src/: lib.rs  main.rs
crates/kratos-cli/src/commands/: clean.rs  diff.rs  mod.rs  report.rs  scan.rs
crates/kratos-cli/tests/: clean_threshold_cli.rs  cli_smoke.rs  diff_cli.rs
crates/kratos-cli/tests/support/: cli.rs  fs.rs
crates/kratos-core/: Cargo.toml
crates/kratos-core/src/: analyze.rs  clean.rs  clean_preview.rs  config.rs  discover.rs  entrypoints.rs  error.rs  ignore.rs  jsonc.rs  lib.rs  model.rs  report.rs  report_diff.rs  report_format.rs  resolve.rs  suppressions.rs
crates/kratos-core/src/parser/: adapter.rs  exports.rs  imports.rs  mod.rs  unused_imports.rs
crates/kratos-core/tests/: analyze_demo_app.rs  clean_preview.rs  clean_safety.rs  clean_thresholds.rs  config_and_discovery.rs  dynamic_usage.rs  parser_extraction.rs  report_diff.rs  report_format.rs  report_v2.rs  suppressions.rs
crates/kratos-node/: Cargo.toml
crates/kratos-node/src/: lib.rs
docs/plan/: 00-rust-migration-overview.md  01-rust-foundation-and-parity.md  02-rust-core-analysis.md  03-rust-cli-and-node-packaging.md  04-rust-cutover-and-docs.md
docs/plans/: 00-cli-help-modularization.md  01-wow-roadmap-overview.md  03-report-history-and-presentation.md  04-sweep-experience.md  05-workspace-cache-and-watch.md  README.md
fixtures/parity/: README.md  manifest.json
fixtures/release-errors/: npm-lookup-not-found.txt  npm-publish-already-published.txt
scripts/: bump-release-version.mjs  capture-parity-fixtures.mjs  classify-npm-lookup-error.mjs  classify-npm-publish-error.mjs  release-plan.mjs
src/: cli.js
test/: bump-release-version.test.js  cli-help.test.js  kratos.test.js  npm-launcher.test.js  package-smoke.test.js
(+24 files in other folders)
