[package]
name = "kratos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Rust CLI surface for Kratos."

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
kratos-core = { path = "../kratos-core" }
serde_json = { version = "1", features = ["preserve_order"] }
