[package]
name = "kratos-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Node bridge surface for Kratos."

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
kratos-cli = { path = "../kratos-cli" }
kratos-core = { path = "../kratos-core" }
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
